force-app/main/default/objects/RepresentanteTabelaPreco__c/RepresentanteTabelaPreco__c.object-meta.xml
<CustomObject>
    <label>Representante &amp; Tabela de Preço</label>
    <nameField>
        <displayFormat>Relação - {000000}</displayFormat>
        <label>N° Relação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Representantes &amp; Tabelas de Preço</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>