force-app/main/default/objects/RepresentanteTabelaPreco__c/fields/CodigoTabPrecoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CodigoTabPrecoRepresentante__c</fullName>
    <externalId>true</externalId>
    <label>Código Tab Preço x Representante</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>