force-app/main/default/objects/RepresentanteTabelaPreco__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Representante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Representantes &amp; Tabelas de Preço</relationshipLabel>
    <relationshipName>RepresentantesTabelasPreco</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>