force-app/main/default/objects/RepresentanteTabelaPreco__c/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de Preço</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Representantes &amp; Tabelas de Preço</relationshipLabel>
    <relationshipName>RepresentantesTabelasPreco</relationshipName>
    <type>Lookup</type>
</CustomField>